# service-manager

./: README.md  diagrama_de_casos_de_uso.drawio.html
service_manager/: dataload.py  dataload_simple.py  db.sqlite3  manage.py  pyproject.toml
service_manager/home/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
service_manager/home/migrations/: 0001_initial.py  0002_alter_service_description.py  0002_initial.py  0003_alter_customer_service_created_at.py  0003_companyuser.py  0004_customer_service_note.py  0004_rename_stock_service_customerservice_stock.py  0005_alter_customer_service_note_file.py  0005_service_value_stock_value.py  0006_alter_service_value_alter_stock_value.py  0006_company_cnpj.py  0007_customerservice_stock_quantity.py  0008_client_company.py
service_manager/login/: backends.py  models.py  serializers.py  urls.py  utils.py  views.py
service_manager/login/migrations/: 0001_initial.py  0002_alter_user_options_user_date_joined_user_first_name_and_more.py
service_manager/service_manager_api/: asgi.py  settings.py  urls.py  wsgi.py
service_manager/static/home/: home.css  home.js  sidebar.css
service_manager/static/listings/: client.js  user_service_history.css  user_service_history.js
service_manager/static/login/: style.css
service_manager/static/registrations/: customer_service_registration.css  registrations.js
service_manager/templates/: nota.html
service_manager/templates/home/: home.html  sidebar.html
service_manager/templates/listings/: client.html  service.html  user_service_history.html
(+5 files in other folders)
