[tool.poetry]
name = "service-manager-api"
version = "0.1.0"
description = ""
authors = ["Erika Fernanda <erika.fernanda@smartsuite.imd.ufrn.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
